--- a/06-Plotting with categorical data.tex
+++ b/06-Plotting with categorical data.tex
@@ -3,9 +3,12 @@
 \begin{frame}[fragile]
 \frametitle{Seaborn Workshop}
 \large
+\noindent \textbf{Plotting with categorical data}
+\begin{itemize}
+\item We previously learned how to use scatterplots and regression model fits to visualize the relationship between two variables and how it changes across levels of additional categorical variables. 
+\item However, what if one of the main variables you are interested in is categorical? In this case, the scatterplot and regression model approach won’t work. There are several options, however, for visualizing such a relationship, which we will discuss in this tutorial.
+\end{itemize}
 
-Plotting with categorical data
-We previously learned how to use scatterplots and regression model fits to visualize the relationship between two variables and how it changes across levels of additional categorical variables. However, what if one of the main variables you are interested in is categorical? In this case, the scatterplot and regression model approach won’t work. There are several options, however, for visualizing such a relationship, which we will discuss in this tutorial.
 \end{frame}
 %===================================%
 \begin{frame}[fragile]
@@ -24,7 +27,7 @@ It is easiest and best to invoke these functions with a DataFrame that is in “
 \begin{frame}[fragile]
 \frametitle{Seaborn Workshop}
 \large
-
+\begin{verbatim}
 %matplotlib inline
 import numpy as np
 import pandas as pd
@@ -36,14 +39,21 @@ np.random.seed(sum(map(ord, "categorical")))
 titanic = sns.load_dataset("titanic")
 tips = sns.load_dataset("tips")
 iris = sns.load_dataset("iris")
+\end{verbatim}
+
 \end{frame}
 %====================================%
 \section{Distributions of observations within categories}
 \begin{frame}[fragile]
 \frametitle{Seaborn Workshop}
 Distributions of observations within categories
-The first set of functions shows the full distribution of the quantitative variable within each level of the categorical variable(s). These generalize some of the approaches we discussed in the chapter to the case where we want to quickly compare across several distributions.
+\begin{itemize}
+\item The first set of functions shows the full distribution of the quantitative variable within each level of the categorical variable(s). 
+\item These generalize some of the approaches we discussed in the chapter to the case where we want to quickly compare across several distributions.
+\end{itemize}
+
 \end{frame}
+\section{Categorical scatterplots}
 %====================================%
 \begin{frame}[fragile]
 \frametitle{Seaborn Workshop}
@@ -75,6 +85,7 @@ With these plots, it’s often helpful to put the categorical variable on the ve
 sns.stripplot(x="total_bill", y="day", hue="time", data=tips);
 ../_images/categorical_15_0.png
 \end{frame}
+\section{Boxplots}
 %====================================%
 \begin{frame}[fragile]
 \frametitle{Seaborn Workshop}
@@ -87,12 +98,12 @@ The first is the familiar boxplot(). This kind of plot shows the three quartile 
 sns.boxplot(x="day", y="total_bill", hue="time", data=tips);
 ../_images/categorical_17_0.png
 \end{frame}
+\section{Violinplots}
 %====================================%
 \begin{frame}[fragile]
 \frametitle{Seaborn Workshop}
 \large
-
-Violinplots
+\noindent \textbf{Violinplots}
 A different approach is a violinplot(), which combines a boxplot with the kernel density estimation procedure described in the :ref:`distributions tutorial <distribution_tutorial>`_:
 
 sns.violinplot(x="total_bill", y="day", hue="time", data=tips);
@@ -111,15 +122,23 @@ sns.violinplot(x="total_bill", y="day", hue="time", data=tips,
 %====================================%
 \begin{frame}[fragile]
 \frametitle{Seaborn Workshop}
-\largeIt’s also possible to “split” the violins when the hue parameter has only two levels, which can allow for a more efficient use of space:
+\large It’s also possible to “split” the violins when the hue parameter has only two levels, which can allow for a more efficient use of space:
 
 sns.violinplot(x="day", y="total_bill", hue="sex", data=tips, split=True);
 ../_images/categorical_23_0.png
+\end{frame}
+%====================================%
+\begin{frame}[fragile]
+	\frametitle{Seaborn Workshop}
 Finally, there are several options for the plot that is drawn on the interior of the violins, including ways to show each individual observation instead of the summary boxplot values:
 
 sns.violinplot(x="day", y="total_bill", hue="sex", data=tips,
                split=True, inner="stick", palette="Set3");
 ../_images/categorical_25_0.png
+\end{frame}
+%====================================%
+\begin{frame}[fragile]
+	\frametitle{Seaborn Workshop}
 It can also be useful to combine stripplot() with violinplot() or boxplot() to show each observation along with a summary of the distribution:
 
 sns.violinplot(x="day", y="total_bill", data=tips, inner=None)
@@ -139,16 +158,29 @@ A familiar style of plot that accomplishes this goal is a bar plot. In seaborn, 
 sns.barplot(x="sex", y="survived", hue="class", data=titanic);
 ../_images/categorical_29_0.png
 A special case for the bar plot is when you want to show the number of observations in each category rather than computing a statistic for a second variable. This is similar to a histogram over a categorical, rather than quantitative, variable. In seaborn, it’s easy to do so with the countplot() function:
-
+\end{frame}
+%====================================%
+\begin{frame}[fragile]
+	\frametitle{Seaborn Workshop}
+	
 sns.countplot(x="deck", data=titanic, palette="Greens_d");
 ../_images/categorical_31_0.png
 Both barplot() and countplot() can be invoked with all of the options discussed above, along with others that are demonstrated in the detailed documentation for each function:
 
 sns.countplot(y="deck", hue="class", data=titanic, palette="Greens_d");
 ../_images/categorical_33_0.png
+\end{frame}
+\section{Point plots}
+%====================================%
+\begin{frame}[fragile]
+	\frametitle{Seaborn Workshop}
 Point plots
 An alternative style for visualizing the same information is offered by the pointplot() function. This function also encodes the value of the estimate with height on the other axis, but rather than show a full bar it just plots the point estimate and confidence interval. Additionally, pointplot connects points from the same hue category. This makes it easy to see how the main relationship is changing as a function of a second variable, because your eyes are quite good at picking up on differences of slopes:
+\end{frame}
 
+%====================================%
+\begin{frame}[fragile]
+	\frametitle{Seaborn Workshop}
 sns.pointplot(x="sex", y="survived", hue="class", data=titanic);
 ../_images/categorical_35_0.png
 To make figures that reproduce well in black and white, it can be good to use different markers and line styles for the levels of the hue category:
@@ -158,6 +190,7 @@ sns.pointplot(x="class", y="survived", hue="sex", data=titanic,
               markers=["^", "o"], linestyles=["-", "--"]);
 ../_images/categorical_37_0.png
 \end{frame}
+\section{Drawing multi-panel categorical plots}
 %====================================%
 \begin{frame}[fragile]
 \frametitle{Seaborn Workshop}
@@ -165,12 +198,30 @@ sns.pointplot(x="class", y="survived", hue="sex", data=titanic,
 
 
 Drawing multi-panel categorical plots
-As we mentioned above, there are two ways to draw categorical plots in seaborn. Similar to the duality in the regression plots, you can either use the functions introduced above, or the higher-level function factorplot(), which combines these functions with a FacetGrid() to add the ability to examine additional categories through the larger structure of the figure.
+\begin{itemize}
+\item As we mentioned above, there are two ways to draw categorical plots in seaborn. 
+\item Similar to the duality in the regression plots, you can either use the functions introduced above, or the higher-level function \texttt{factorplot()}, which combines these functions with a \texttt{FacetGrid()} to add the ability to examine additional categories through the larger structure of the figure.
+\end{itemize}
 
-While the main options for each plot kind are available either way, the lower-level functions have a bit more flexibility in the kind of inputs they can take. For instance, you can just pass a DataFrame to the data parameter, and the distribution or central tendency of each column in the dataframe will be shown:
+\end{frame}
+%====================================%
+\begin{frame}[fragile]
+	\frametitle{Seaborn Workshop}
+	\large
+\begin{itemize}
+\item While the main options for each plot kind are available either way, the lower-level functions have a bit more flexibility in the kind of inputs they can take.
+\item For instance, you can just pass a DataFrame to the data parameter, and the distribution or central tendency of each column in the dataframe will be shown:
+\end{itemize}
+
 
 sns.boxplot(data=iris, orient="h");
 ../_images/categorical_39_0.png
+\end{frame}
+%====================================%
+\begin{frame}[fragile]
+	\frametitle{Seaborn Workshop}
+	\large
+	
 Additionally, these functions accept vectors of Pandas or numpy objects rather than variables in a DataFrame:
 
 sns.violinplot(x=iris.species, y=iris.sepal_length);
@@ -180,32 +231,69 @@ To control the size and shape of plots made by the functions discussed above, yo
 f, ax = plt.subplots(figsize=(7, 3))
 sns.countplot(y="deck", data=titanic, color="c");
 ../_images/categorical_43_0.png
-The factorplot() function is a higher-level wrapper on these plots that produces a matplotlib figure managed through a FacetGrid:
+\end{frame}
+%====================================%
+\begin{frame}[fragile]
+	\frametitle{Seaborn Workshop}
+	\large
+	
+The \texttt{factorplot()} function is a higher-level wrapper on these plots that produces a matplotlib figure managed through a FacetGrid:
 
 sns.factorplot(x="day", y="total_bill", hue="smoker", data=tips);
 ../_images/categorical_45_0.png
-By default it uses pairplot(), but the kind parameter lets you chose any of the kinds of plots discussed above:
+\end{frame}
+%====================================%
+\begin{frame}[fragile]
+	\frametitle{Seaborn Workshop}
+	\large
+	
+By default it uses \texttt{pairplot()}, but the kind parameter lets you chose any of the kinds of plots discussed above:
 
 sns.factorplot(x="day", y="total_bill", hue="smoker", data=tips, kind="bar");
 ../_images/categorical_47_0.png
-The key advantage of factorplot() is that it’s easy to add faceting by additional variables in the DataFrame, such as along the columns:
+\end{frame}
+%====================================%
+\begin{frame}[fragile]
+	\frametitle{Seaborn Workshop}
+	\large
+	
+The key advantage of \texttt{factorplot()} is that it’s easy to add faceting by additional variables in the DataFrame, such as along the columns:
 
 sns.factorplot(x="day", y="total_bill", hue="smoker",
                col="time", data=tips, kind="bar");
 ../_images/categorical_49_0.png
+\end{frame}
+%====================================%
+\begin{frame}[fragile]
+	\frametitle{Seaborn Workshop}
+	\large
+	
 Any kind of plot can be drawn. Because of the way FacetGrid works, to change the size and shape of the figure you need to specify the size and aspect arguments, which apply to a single facet:
-
+\begin{verbatim}
 sns.factorplot(x="time", y="total_bill", hue="smoker",
                col="day", data=tips, kind="box", size=4, aspect=.5);
 ../_images/categorical_51_0.png
+\end{verbatim}
+\end{frame}
+%====================================%
+\begin{frame}[fragile]
+	\frametitle{Seaborn Workshop}
+	\large
+	
 Because of the generalized API of the categorical plots, they should be easy to apply to other more complex contexts. For example, they are easily combined with a PairGrid to show categorical relationships across several different variables:
-
+\end{frame}
+%====================================%
+\begin{frame}[fragile]
+	\frametitle{Seaborn Workshop}
+	\large
+	\begin{verbatim}
 g = sns.PairGrid(tips,
                  x_vars=["smoker", "time", "sex"],
                  y_vars=["total_bill", "tip"],
                  aspect=.75, size=3.5)
 g.map(sns.violinplot, palette="pastel");
 ../_images/categorical_53_0.png
+\end{verbatim}
 \end{frame}
 %====================================%
 \end{document}
